--- a/docker/app/Sports_Location/public/css/header_footer.css
+++ b/docker/app/Sports_Location/public/css/header_footer.css
@@ -7,14 +7,19 @@ body {
 
 header {
   width: 100%;
-  height: 90px;
+  height: 60px;
   position: fixed;
   top: 0;
   z-index: 10;
 }
 
+header nav {
+  height: 60px;
+}
+
 main {
-  padding-top: 100px;
+  padding-top: 90px;
+  padding-bottom: 30px;
 }
 
 footer {
