--- a/docker/app/Sports_Location/public/css/stylesheet.css
+++ b/docker/app/Sports_Location/public/css/stylesheet.css
@@ -7,6 +7,7 @@ body {
 
 header {
   width: 100%;
+  height: 60px;
   position: fixed;
   top: 0;
   z-index: 10;
@@ -50,4 +51,38 @@ textarea {
   width: 100%;
   height: 270px;
   border-radius: 50%;
+}
+
+.top-image {
+  background-image: url("../images/top.jpg");
+  position: absolute;
+  top: 60px;
+  left: 0;
+  height: 120px;
+  background-size: cover;
+  background-position: 50% 50%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.top-image::before {
+  content: '';
+  background-color: rgba(0,0,0,.5);
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+}
+
+.top-image p{
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  color: #fff;
+  font-size: 15px;
+  font-weight: bold;
+  text-align: center;
 }
