--- a/docker/app/Sports_Location/public/css/stylesheet.css
+++ b/docker/app/Sports_Location/public/css/stylesheet.css
@@ -47,6 +47,11 @@ textarea {
   border-radius: 50%;
 }
 
+.event-index-image {
+  height: 110px;
+  border-radius: 30%;
+}
+
 .profile-image {
   width: 100%;
   height: 270px;
