--- a/docker/app/Sports_Location/public/css/stylesheet.css
+++ b/docker/app/Sports_Location/public/css/stylesheet.css
@@ -84,3 +84,38 @@ textarea {
   font-weight: bold;
   text-align: center;
 }
+
+#star {
+  color: #26d0c9;
+  font-size: 30px;
+}
+
+.rating{
+  position: relative;
+  z-index: 0;
+  display: inline-block;
+  white-space: nowrap;
+  color: #CCCCCC;
+  font-size: 20px;
+}
+
+.rating:before, .rating:after{
+  content: '★★★★★';
+}
+
+.rating:after{
+  position: absolute;
+  z-index: 1;
+  top: 0;
+  left: 0;
+  overflow: hidden;
+  white-space: nowrap;
+  color: #26d0c9;
+}
+
+.rating[data-rate="5"]:after{ width: 100%; } /* 星5 */
+.rating[data-rate="4"]:after{ width: 80%; } /* 星4 */
+.rating[data-rate="3"]:after{ width: 60%; } /* 星3 */
+.rating[data-rate="2"]:after{ width: 40%; } /* 星2 */
+.rating[data-rate="1"]:after{ width: 20%; } /* 星1 */
+.rating[data-rate="0"]:after{ width: 0%; } /* 星0 */
